fixes on iphone 6 onwards

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
 	font-family: gotham;
 }
 
+.hide-pc {
+	display: none;
+}
+
 .circle-title {
 	width:50%;
 	left: 25%;
@@ -191,7 +195,50 @@ a.read_more:hover {
 }
     
 @media only screen and (max-width:480px){
-       /* styles for mobile browsers smaller than 480px; (iPhone) */
+	.option1 {
+	margin-top: 100px;
+	border-radius: 10px;
+	padding: 10px;
+	}
+
+	.opt1-desc {
+		font-size: 18px;
+		margin-top: 40px;
+	}
+
+	.promo-code1 {
+	position: absolute;
+	width: 90px;
+	left: 0px;
+	top: 0px;
+	}
+
+	.option1btn {
+	padding: 20px 40px;
+	border-radius: 10px;
+	font-size: 1em;
+	letter-spacing: 1px;
+	border: 2px solid #0a6cb7;
+	}
+
+	.btnpos {
+	margin-top: -65px;
+	}
+
+	.tuition, .airport, .books, .housing {
+		width: 141px !important;
+		flex: inherit !important;
+		max-width: inherit !important;
+		margin: 0;
+		text-align: center;
+	}
+
+	.hide-xs {
+		display: none;
+	}
+	.hide-pc {
+		display: block;
+	}
 }
     
 @media only screen and (device-width:768px){
